Version 1.1.4 :
Updated to Minecraft version 1.7.10.
Rewrote and improved the Essentia Generator code. It's now very easy to add new ones.
Rewrote and improved the Solar Panel code. It's now very easy to add new ones.
Rewrote and improved the Drill, Chainsaw, Omnitool, Boot, Goggle and Wing code. It's now very easy to add new ones, as well as way more efficient.
Refractored  a lot of the code in preparation for the modules.
Added a new Essentia Generator, the Aer Generator.
Added a tooltip to the current Essentia Generators, saying they will be removed in future versions.
Added an Essentia Generator, alongisde with a dynamic system calculating outputs linked to different essentias. Change the values of the primals in the config, and there is even a maximum cap!

Version 1.1.3 : 
Added a logo to the mcmod.info, and fixed the version tag.

Version 1.1.2 :
Fixed the Shield Block being broken by the wither.
Added Config GUIs. Regenerating the config file is HIGLY reccomended.
Moved the baubles API to package it with EMT, along with the @API annotation to prevent any issues.

Version 1.1.1 : 
Fixed a bug with The One Ring where mobs attacked you when you removed it while in creative.
New Thaumonomicon entries for a couple of things, thanks to Professor29.
Forgot to mention it, new Nanosuit Boots of the Traveller texture thanks to TehNut.
Removed Thaumium Plate and Lightning Summoner, and moved them to use other ids. This will delete existing ones.
Moved all the Solar Panels tooltips to require the use of the shift key to show themselves.
Adding wings, my take at the mix of Magic and Jetpacks.
Blacklist of the Etheral Processor now extends to anything containing armor, armour, helm, chestp, legging, boot, sword, shovel, axe or pick in its unlocalized name.
Added a drop to the Tainted Chicken, the Tainted Feather. Also added a crafting recipe for it.
Added a couple of crating components, used in the making of the wings.