@@ -3,6 +3,5 @@
 package_group=com.tombenpotter.emt
 mc_version=1.7.10
 forge_version=10.13.0.1208
-build_number=2
 mod_version=1.1.4
 mod_name=ElectroMagicTools
