@@ -29,5 +29,7 @@ public class CreativeTabEMT extends CreativeTabs {
 	}
 
 	@Override
-	public Item getTabIconItem() { return new Item(); }
+	public Item getTabIconItem() {
+		return new Item();
+	}
 }
